# Masters-Thesis

./: .gitignore  README.md  benchmark_models.txt  existing_models_to_test.txt  prototype_llms.txt
app/: .env  .env.example  README.md  napady_prototyp.txt  pyproject.toml
app/app/: __init__.py  analyze_video.py  main.py  preprocess.py  search_and_analyze.py  search_embeddings.py  utils.py
app/frontend/: index.html
app/frontend/src/: App.vue  style.css
app/frontend/src/router/: index.js
app/frontend/src/views/: Analysis.vue  Search.vue  Videos.vue
app/src/: __init__.py  analyze_video.py  db_and_storage.py  main.py  preprocess.py  search_embeddings.py  utils.py
app/tmp/: readme.txt
demos/: Zero_shot_classify_a_YouTube_video_with_X_CLIP.ipynb
model_benchmarks/: README.md  requirements.txt
model_benchmarks/embedding_benchmarks/: cars196_benchmark_embeddings.py  data.py  evaluate_results.py  notes.txt  roadsigns_benchmark_embeddings.py  run_benchmark.py
model_benchmarks/embedding_benchmarks/datasets/CARS196/cars_train_images/: placeholder.txt
model_benchmarks/embedding_benchmarks/datasets/czech_traffic_signs/: annotations.geojson
model_benchmarks/embedding_benchmarks/datasets/czech_traffic_signs/images/: placeholder.txt
model_benchmarks/embedding_benchmarks/results/: cars196_ALIGN_results.json  cars196_BLIP_results.json  cars196_CLIP_results.json  cars196_SigLIP_results.json  cars196_evaluation.json  czech_traffic_signs_ALIGN_results.json  czech_traffic_signs_BLIP_results.json  czech_traffic_signs_CLIP_results.json  czech_traffic_signs_SigLIP_results.json  czech_traffic_signs_evaluation.json
model_benchmarks/mllm_benchmark/: data.py  evaluate_results.py  run_benchmark.py
model_benchmarks/mllm_benchmark/dataset/SUTD-TrafficQA/compressed_videos/: placeholder.txt
model_benchmarks/mllm_benchmark/results/: evaluated_results.json  sutd_traffic_qa_GPT-4o_results.json  sutd_traffic_qa_Qwen2.5-VL_results.json  sutd_traffic_qa_VideoLLaMA-3_results.json
model_benchmarks/mllm_benchmarks/: benchmark_mllms.py  data.py  evaluate_results.py  notes.txt  run_benchmark.py
model_benchmarks/mllm_benchmarks/dataset/SUTD-TrafficQA/: R2_test.jsonl
model_benchmarks/mllm_benchmarks/results/: evaluated_results.json  sutd_traffic_qa_LLaVA-OneVision_results.json  sutd_traffic_qa_Qwen2.5-VL_results.json
model_benchmarks/mllm_benchmarks/tmp/: placeholder.txt
temp/: benchmark_models.txt
