[tool.poetry]
name = "app"
version = "0.1.0"
description = "Video LLM-based search engine"
authors = ["MichalPysik <n3r0x541@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
app = "src.main:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pillow = "^11.0.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
pymilvus = "^2.5.0"
poetry-dotenv-plugin = "^0.2.0"
sentencepiece = "^0.2.0"
minio = "^7.2.15"
ffmpeg-python = "^0.2.0"
bitsandbytes = "^0.45.3"
accelerate = "^1.4.0"
openai = "^1.65.2"
flash-attn = "^2.7.4.post1" # When causing errors, install via 'poetry shell' as 'pip install flash-attn --no-build-isolation'
qwen-vl-utils = {version = "0.0.8", extras = ["decord"]}
python-multipart = "^0.0.20"

timm = "1.0.13" # comment out this line and the following 2 lines (transformers, autoawq) when using BLIP model
transformers = "4.49.0" # LLaVA-OneVision may require slightly older version (e.g., 4.47.0)
autoawq = "^0.2.7.post3"

# salesforce-lavis = "^1.0.2" # comment out this line and the following line (tokenizers) when using CLIP, SigLIP or ALIGN model
# tokenizers = "0.13.2" # requires RUST compiler 1.72.0! (export RUSTFLAGS="-A invalid_reference_casting" && poetry add tokenizers==0.13.2)

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
